--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -56,16 +56,17 @@
             background-color: #ffeb3b;
             border-radius: 10px;
             border: 2px solid #fbc02d;
-            cursor: grab;
+            cursor: pointer;
             font-size: 1.4em;
             color: #d84315;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
-        .list-item:hover {
-            background-color: #fff176;
-            transform: scale(1.05);
+        .list-item.selected {
+            background-color: #f06292;
+            transform: scale(1.2);
+            color: #ffffff;
         }
 
         .drop-zone {
@@ -78,10 +79,11 @@
             font-size: 1.4em;
             color: #01579b;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
-        .drop-zone:hover {
+        .drop-zone.selected {
             background-color: #4fc3f7;
             transform: scale(1.05);
         }
@@ -130,14 +132,6 @@
             background-color: #7b1fa2;
             transform: scale(1.05);
         }
-
-        /* Floating state for list-items */
-        .floating {
-            pointer-events: none;
-            z-index: 1000;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-            transition: none;
-        }
     </style>
 </head>
 <body>
@@ -150,25 +144,25 @@
     <div class="container">
         <div class="list-container">
             <div class="list" id="lessons">
-                <div class="list-item" data-match="1" onclick="speakText(this)">Courage in the Face of Challenges</div>
-                <div class="list-item" data-match="2" onclick="speakText(this)">Trust in God</div>
-                <div class="list-item" data-match="3" onclick="speakText(this)">Use of Talents and Abilities</div>
-                <div class="list-item" data-match="4" onclick="speakText(this)">Appearances Can Be Deceiving</div>
-                <div class="list-item" data-match="5" onclick="speakText(this)">Preparation and Experience</div>
-                <div class="list-item" data-match="6" onclick="speakText(this)">Overcoming Fear</div>
-                <div class="list-item" data-match="7" onclick="speakText(this)">Resilience and Persistence</div>
-                <div class="list-item" data-match="8" onclick="speakText(this)">Humility</div>
+                <div class="list-item" data-match="1" onclick="selectLeftItem(this)">Courage in the Face of Challenges</div>
+                <div class="list-item" data-match="2" onclick="selectLeftItem(this)">Trust in God</div>
+                <div class="list-item" data-match="3" onclick="selectLeftItem(this)">Use of Talents and Abilities</div>
+                <div class="list-item" data-match="4" onclick="selectLeftItem(this)">Appearances Can Be Deceiving</div>
+                <div class="list-item" data-match="5" onclick="selectLeftItem(this)">Preparation and Experience</div>
+                <div class="list-item" data-match="6" onclick="selectLeftItem(this)">Overcoming Fear</div>
+                <div class="list-item" data-match="7" onclick="selectLeftItem(this)">Resilience and Persistence</div>
+                <div class="list-item" data-match="8" onclick="selectLeftItem(this)">Humility</div>
             </div>
 
             <div class="list" id="explanations">
-                <div class="drop-zone" data-match="1" onclick="speakText(this)">David faced Goliath with courage, teaching us not to be intimidated by challenges.</div>
-                <div class="drop-zone" data-match="2" onclick="speakText(this)">David trusted God for victory, showing the power of faith in overcoming obstacles.</div>
-                <div class="drop-zone" data-match="3" onclick="speakText(this)">David used his sling, emphasizing the importance of using our unique talents.</div>
-                <div class="drop-zone" data-match="4" onclick="speakText(this)">David was small, Goliath was big, but true strength comes from within.</div>
-                <div class="drop-zone" data-match="5" onclick="speakText(this)">David's experience as a shepherd prepared him for greater challenges.</div>
-                <div class="drop-zone" data-match="6" onclick="speakText(this)">David overcame fear with faith and action, teaching us to face our fears.</div>
-                <div class="drop-zone" data-match="7" onclick="speakText(this)">David persisted despite opposition, highlighting the importance of resilience.</div>
-                <div class="drop-zone" data-match="8" onclick="speakText(this)">David remained humble after victory, showing the importance of humility.</div>
+                <div class="drop-zone" data-match="1" onclick="selectRightItem(this)">David faced Goliath with courage, teaching us not to be intimidated by challenges.</div>
+                <div class="drop-zone" data-match="2" onclick="selectRightItem(this)">David trusted God for victory, showing the power of faith in overcoming obstacles.</div>
+                <div class="drop-zone" data-match="3" onclick="selectRightItem(this)">David used his sling, emphasizing the importance of using our unique talents.</div>
+                <div class="drop-zone" data-match="4" onclick="selectRightItem(this)">David was small, Goliath was big, but true strength comes from within.</div>
+                <div class="drop-zone" data-match="5" onclick="selectRightItem(this)">David's experience as a shepherd prepared him for greater challenges.</div>
+                <div class="drop-zone" data-match="6" onclick="selectRightItem(this)">David overcame fear with faith and action, teaching us to face our fears.</div>
+                <div class="drop-zone" data-match="7" onclick="selectRightItem(this)">David persisted despite opposition, highlighting the importance of resilience.</div>
+                <div class="drop-zone" data-match="8" onclick="selectRightItem(this)">David remained humble after victory, showing the importance of humility.</div>
             </div>
         </div>
     </div>
@@ -176,61 +170,34 @@
     <button class="restart-btn" onclick="restartGame()">Restart Game</button>
 
     <script>
-        // Shuffle the explanations list
-        function shuffleList() {
-            const explanations = document.getElementById('explanations');
-            for (let i = explanations.children.length; i >= 0; i--) {
-                explanations.appendChild(explanations.children[Math.random() * i | 0]);
+        let selectedLeftItem = null;
+
+        function selectLeftItem(element) {
+            if (selectedLeftItem) {
+                selectedLeftItem.classList.remove('selected');
             }
+            selectedLeftItem = element;
+            element.classList.add('selected');
+            speakText(element);
         }
 
-        // Call shuffleList when the page loads
-        window.onload = shuffleList;
+        function selectRightItem(element) {
+            if (!selectedLeftItem) return;
 
-        let selectedItem = null;
-        let initialPosition = { x: 0, y: 0 };
+            speakText(element);
 
-        document.querySelectorAll('.list-item').forEach(item => {
-            item.addEventListener('click', function(e) {
-                selectedItem = this;
-                initialPosition = { x: e.clientX, y: e.clientY };
-                this.classList.add('floating');
-            });
-        });
-
-        document.addEventListener('mousemove', function(e) {
-            if (selectedItem) {
-                selectedItem.style.position = 'absolute';
-                selectedItem.style.left = `${e.clientX}px`;
-                selectedItem.style.top = `${e.clientY}px`;
+            if (selectedLeftItem.dataset.match === element.dataset.match) {
+                element.textContent = selectedLeftItem.textContent;
+                element.classList.add('correct');
+                selectedLeftItem.classList.add('hidden');
+                selectedLeftItem = null;
+            } else {
+                selectedLeftItem.classList.remove('selected');
+                selectedLeftItem = null;
+                element.classList.add('wrong');
+                setTimeout(() => element.classList.remove('wrong'), 1000);
             }
-        });
-
-        document.addEventListener('click', function(e) {
-            if (selectedItem && !e.target.classList.contains('list-item')) {
-                selectedItem.style.position = 'static';
-                selectedItem.classList.remove('floating');
-                selectedItem = null;
-            }
-        });
-
-        document.querySelectorAll('.drop-zone').forEach(zone => {
-            zone.addEventListener('click', function(e) {
-                if (selectedItem) {
-                    if (selectedItem.dataset.match === this.dataset.match) {
-                        this.textContent = selectedItem.textContent;
-                        this.classList.add('correct');
-                        selectedItem.classList.add('hidden');
-                    } else {
-                        this.classList.add('wrong');
-                        setTimeout(() => this.classList.remove('wrong'), 1000);
-                    }
-                    selectedItem.style.position = 'static';
-                    selectedItem.classList.remove('floating');
-                    selectedItem = null;
-                }
-            });
-        });
+        }
 
         function speakText(element) {
             const text = element.textContent;
