--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -6,7 +6,7 @@
     <title>Matching Game</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             background-color: #f3e5f5;
             margin: 0;
             padding: 0;
@@ -23,6 +23,7 @@
             margin: 20px 0;
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .container {
@@ -61,12 +62,18 @@
             color: #d84315;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease, transform 0.3s ease;
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .list-item.selected {
             background-color: #f06292;
             transform: scale(1.2);
             color: #ffffff;
+        }
+
+        .list-item.used {
+            background-color: #4caf50;
+            color: white;
         }
 
         .drop-zone {
@@ -81,11 +88,7 @@
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-
-        .drop-zone.selected {
-            background-color: #4fc3f7;
-            transform: scale(1.05);
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .correct {
@@ -93,6 +96,25 @@
             border-color: #388e3c;
             color: #2e7d32;
             animation: correct-bounce 0.3s ease;
+        }
+
+        .correct-animate {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            max-width: 90vw;
+            max-height: 90vh;
+            transform: translate(-50%, -50%) scale(1.5);
+            background-color: #4caf50;
+            color: white;
+            z-index: 1000;
+            transition: transform 0.5s ease, opacity 0.5s ease;
+            opacity: 1;
+        }
+
+        .correct-animate.fade-out {
+            opacity: 0;
+            transform: translate(-50%, -50%) scale(0.1);
         }
 
         .wrong {
@@ -113,7 +135,7 @@
             25% { transform: translateX(-5px); }
             50% { transform: translateX(5px); }
             75% { transform: translateX(-5px); }
-            100% { transform: translateX(0); }
+            100% { translateX(0); }
         }
 
         .restart-btn {
@@ -126,6 +148,7 @@
             cursor: pointer;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease, transform 0.3s ease;
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .restart-btn:hover {
@@ -144,25 +167,11 @@
     <div class="container">
         <div class="list-container">
             <div class="list" id="lessons">
-                <div class="list-item" data-match="1" onclick="selectLeftItem(this)">Courage in the Face of Challenges</div>
-                <div class="list-item" data-match="2" onclick="selectLeftItem(this)">Trust in God</div>
-                <div class="list-item" data-match="3" onclick="selectLeftItem(this)">Use of Talents and Abilities</div>
-                <div class="list-item" data-match="4" onclick="selectLeftItem(this)">Appearances Can Be Deceiving</div>
-                <div class="list-item" data-match="5" onclick="selectLeftItem(this)">Preparation and Experience</div>
-                <div class="list-item" data-match="6" onclick="selectLeftItem(this)">Overcoming Fear</div>
-                <div class="list-item" data-match="7" onclick="selectLeftItem(this)">Resilience and Persistence</div>
-                <div class="list-item" data-match="8" onclick="selectLeftItem(this)">Humility</div>
+                <!-- Lessons will be loaded here dynamically -->
             </div>
 
             <div class="list" id="explanations">
-                <div class="drop-zone" data-match="1" onclick="selectRightItem(this)">David faced Goliath with courage, teaching us not to be intimidated by challenges.</div>
-                <div class="drop-zone" data-match="2" onclick="selectRightItem(this)">David trusted God for victory, showing the power of faith in overcoming obstacles.</div>
-                <div class="drop-zone" data-match="3" onclick="selectRightItem(this)">David used his sling, emphasizing the importance of using our unique talents.</div>
-                <div class="drop-zone" data-match="4" onclick="selectRightItem(this)">David was small, Goliath was big, but true strength comes from within.</div>
-                <div class="drop-zone" data-match="5" onclick="selectRightItem(this)">David's experience as a shepherd prepared him for greater challenges.</div>
-                <div class="drop-zone" data-match="6" onclick="selectRightItem(this)">David overcame fear with faith and action, teaching us to face our fears.</div>
-                <div class="drop-zone" data-match="7" onclick="selectRightItem(this)">David persisted despite opposition, highlighting the importance of resilience.</div>
-                <div class="drop-zone" data-match="8" onclick="selectRightItem(this)">David remained humble after victory, showing the importance of humility.</div>
+                <!-- Explanations will be loaded here dynamically -->
             </div>
         </div>
     </div>
@@ -171,6 +180,34 @@
 
     <script>
         let selectedLeftItem = null;
+
+        // Load lessons and explanations dynamically from the text file
+        fetch('texto.txt')
+            .then(response => response.text())
+            .then(data => {
+                const lessonsContainer = document.getElementById('lessons');
+                const explanationsContainer = document.getElementById('explanations');
+                const lines = data.split('\n');
+
+                lines.forEach((line, index) => {
+                    const [type, lesson, explanation] = line.split('|');
+                    if (type === 'lesson') {
+                        const lessonDiv = document.createElement('div');
+                        lessonDiv.classList.add('list-item');
+                        lessonDiv.textContent = lesson;
+                        lessonDiv.dataset.match = index + 1;
+                        lessonDiv.onclick = () => selectLeftItem(lessonDiv);
+                        lessonsContainer.appendChild(lessonDiv);
+
+                        const explanationDiv = document.createElement('div');
+                        explanationDiv.classList.add('drop-zone');
+                        explanationDiv.textContent = explanation;
+                        explanationDiv.dataset.match = index + 1;
+                        explanationDiv.onclick = () => selectRightItem(explanationDiv);
+                        explanationsContainer.appendChild(explanationDiv);
+                    }
+                });
+            });
 
         function selectLeftItem(element) {
             if (selectedLeftItem) {
@@ -187,16 +224,27 @@
             speakText(element);
 
             if (selectedLeftItem.dataset.match === element.dataset.match) {
-                element.textContent = selectedLeftItem.textContent;
-                element.classList.add('correct');
-                selectedLeftItem.classList.add('hidden');
-                selectedLeftItem = null;
+                animateCorrectMatch(element);
+                selectedLeftItem.classList.add('used');
+                selectedLeftItem.classList.remove('selected');
             } else {
                 selectedLeftItem.classList.remove('selected');
                 selectedLeftItem = null;
                 element.classList.add('wrong');
                 setTimeout(() => element.classList.remove('wrong'), 1000);
             }
+        }
+
+        function animateCorrectMatch(element) {
+            element.classList.add('correct-animate');
+            const utterance = new SpeechSynthesisUtterance(element.textContent);
+            utterance.onend = () => {
+                element.classList.add('fade-out');
+                setTimeout(() => {
+                    element.style.display = 'none';
+                }, 500);
+            };
+            window.speechSynthesis.speak(utterance);
         }
 
         function speakText(element) {
