--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matching Game</title>
+    <title>Hannah Matching Game</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -138,7 +138,7 @@
             100% { translateX(0); }
         }
 
-        .restart-btn {
+        .restart-btn, .back-btn {
             padding: 10px 20px;
             font-size: 1.2em;
             background-color: #8e24aa;
@@ -151,18 +151,19 @@
             font-family: 'Times New Roman', Times, serif;
         }
 
-        .restart-btn:hover {
+        .restart-btn:hover, .back-btn:hover {
             background-color: #7b1fa2;
             transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 20px; background-color: #ffeb3b; color: #d84315; border: none; border-radius: 10px; font-size: 1.4em; cursor: pointer; transition: background-color 0.3s ease;">
+
+<button onclick="window.location.href='../index.html'" class="back-btn">
     Back
 </button>
 
-    <h1>Matching Game</h1>
+    <h1>Hannah Matching Game</h1>
 
     <div class="container">
         <div class="list-container">
@@ -189,25 +190,42 @@
                 const explanationsContainer = document.getElementById('explanations');
                 const lines = data.split('\n');
 
+                const items = [];
                 lines.forEach((line, index) => {
                     const [type, lesson, explanation] = line.split('|');
                     if (type === 'lesson') {
-                        const lessonDiv = document.createElement('div');
-                        lessonDiv.classList.add('list-item');
-                        lessonDiv.textContent = lesson;
-                        lessonDiv.dataset.match = index + 1;
-                        lessonDiv.onclick = () => selectLeftItem(lessonDiv);
-                        lessonsContainer.appendChild(lessonDiv);
-
-                        const explanationDiv = document.createElement('div');
-                        explanationDiv.classList.add('drop-zone');
-                        explanationDiv.textContent = explanation;
-                        explanationDiv.dataset.match = index + 1;
-                        explanationDiv.onclick = () => selectRightItem(explanationDiv);
-                        explanationsContainer.appendChild(explanationDiv);
+                        items.push({ lesson, explanation, index });
                     }
                 });
+
+                // Shuffle the items
+                shuffleArray(items);
+
+                // Populate the containers with shuffled items
+                items.forEach(item => {
+                    const lessonDiv = document.createElement('div');
+                    lessonDiv.classList.add('list-item');
+                    lessonDiv.textContent = item.lesson;
+                    lessonDiv.dataset.match = item.index + 1;
+                    lessonDiv.onclick = () => selectLeftItem(lessonDiv);
+                    lessonsContainer.appendChild(lessonDiv);
+
+                    const explanationDiv = document.createElement('div');
+                    explanationDiv.classList.add('drop-zone');
+                    explanationDiv.textContent = item.explanation;
+                    explanationDiv.dataset.match = item.index + 1;
+                    explanationDiv.onclick = () => selectRightItem(explanationDiv);
+                    explanationsContainer.appendChild(explanationDiv);
+                });
             });
+
+        // Shuffle array function
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
 
         function selectLeftItem(element) {
             if (selectedLeftItem) {
