--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -190,26 +190,32 @@
                 const explanationsContainer = document.getElementById('explanations');
                 const lines = data.split('\n');
 
-                const items = [];
+                const lessons = [];
+                const explanations = [];
                 lines.forEach((line, index) => {
                     const [type, lesson, explanation] = line.split('|');
                     if (type === 'lesson') {
-                        items.push({ lesson, explanation, index });
+                        lessons.push({ lesson, index });
+                        explanations.push({ explanation, index });
                     }
                 });
 
-                // Shuffle the items
-                shuffleArray(items);
+                // Shuffle lessons and explanations independently
+                shuffleArray(lessons);
+                shuffleArray(explanations);
 
-                // Populate the containers with shuffled items
-                items.forEach(item => {
+                // Populate the lessons container with shuffled lessons
+                lessons.forEach(item => {
                     const lessonDiv = document.createElement('div');
                     lessonDiv.classList.add('list-item');
                     lessonDiv.textContent = item.lesson;
                     lessonDiv.dataset.match = item.index + 1;
                     lessonDiv.onclick = () => selectLeftItem(lessonDiv);
                     lessonsContainer.appendChild(lessonDiv);
+                });
 
+                // Populate the explanations container with shuffled explanations
+                explanations.forEach(item => {
                     const explanationDiv = document.createElement('div');
                     explanationDiv.classList.add('drop-zone');
                     explanationDiv.textContent = item.explanation;
