--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -259,21 +259,13 @@
             }
         }
 
-        function animateCorrectMatch(element) {
-            element.classList.add('correct-animate');
-            const utterance = new SpeechSynthesisUtterance(element.textContent);
-            utterance.onend = () => {
-                element.classList.add('fade-out');
-                setTimeout(() => {
-                    element.style.display = 'none';
-                }, 500);
-            };
-            window.speechSynthesis.speak(utterance);
-        }
-
         function speakText(element) {
+            // Interrompe qualquer leitura anterior
+            window.speechSynthesis.cancel();
+
             const text = element.textContent;
             const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = 'en-US';  // Define a leitura em inglês
             window.speechSynthesis.speak(utterance);
         }
 
