--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -259,13 +259,26 @@
             }
         }
 
-        function speakText(element) {
-            // Interrompe qualquer leitura anterior
-            window.speechSynthesis.cancel();
+        function animateCorrectMatch(element) {
+            // Cresce o bloco correto e move para o centro da tela
+            element.classList.add('correct-animate');
+            const utterance = new SpeechSynthesisUtterance(element.textContent);
+            utterance.lang = 'en-US';  // Leitura em inglês
+            utterance.onend = () => {
+                element.classList.add('fade-out');
+                setTimeout(() => {
+                    element.style.display = 'none';  // Remove o bloco após a leitura
+                }, 500);
+            };
+            window.speechSynthesis.cancel();  // Interrompe qualquer leitura anterior
+            window.speechSynthesis.speak(utterance);
+        }
 
+        function speakText(element) {
+            window.speechSynthesis.cancel();  // Interrompe qualquer leitura anterior
             const text = element.textContent;
             const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = 'en-US';  // Define a leitura em inglês
+            utterance.lang = 'en-US';  // Leitura em inglês
             window.speechSynthesis.speak(utterance);
         }
 
