--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -135,7 +135,7 @@
             25% { transform: translateX(-5px); }
             50% { transform: translateX(5px); }
             75% { transform: translateX(-5px); }
-            100% { translateX(0); }
+            100% { transform: translateX(0); }
         }
 
         .restart-btn, .back-btn {
@@ -181,6 +181,7 @@
 
     <script>
         let selectedLeftItem = null;
+        let currentAnimatedItem = null;  // Referência ao item atualmente animado
 
         // Load lessons and explanations dynamically from the text file
         fetch('texto.txt')
@@ -245,6 +246,15 @@
         function selectRightItem(element) {
             if (!selectedLeftItem) return;
 
+            // Remover o item animado anterior, se houver
+            if (currentAnimatedItem) {
+                currentAnimatedItem.classList.add('fade-out');
+                setTimeout(() => {
+                    currentAnimatedItem.style.display = 'none';
+                    currentAnimatedItem = null;
+                }, 500);
+            }
+
             speakText(element);
 
             if (selectedLeftItem.dataset.match === element.dataset.match) {
@@ -262,12 +272,14 @@
         function animateCorrectMatch(element) {
             // Cresce o bloco correto e move para o centro da tela
             element.classList.add('correct-animate');
+            currentAnimatedItem = element;  // Armazena o item atualmente animado
             const utterance = new SpeechSynthesisUtterance(element.textContent);
             utterance.lang = 'en-US';  // Leitura em inglês
             utterance.onend = () => {
                 element.classList.add('fade-out');
                 setTimeout(() => {
                     element.style.display = 'none';  // Remove o bloco após a leitura
+                    currentAnimatedItem = null;  // Limpa a referência ao item animado
                 }, 500);
             };
             window.speechSynthesis.cancel();  // Interrompe qualquer leitura anterior
