--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -135,7 +135,7 @@
             25% { transform: translateX(-5px); }
             50% { transform: translateX(5px); }
             75% { transform: translateX(-5px); }
-            100% { transform: translateX(0); }
+            100% { translateX(0); }
         }
 
         .restart-btn, .back-btn {
@@ -234,7 +234,19 @@
             }
         }
 
+        function removeCurrentAnimatedItem() {
+            // Remover o item animado anterior, se houver
+            if (currentAnimatedItem) {
+                currentAnimatedItem.classList.add('fade-out');
+                setTimeout(() => {
+                    currentAnimatedItem.style.display = 'none';
+                    currentAnimatedItem = null;
+                }, 500);
+            }
+        }
+
         function selectLeftItem(element) {
+            removeCurrentAnimatedItem();  // Remove o bloco ampliado ao clicar em qualquer outro bloco
             if (selectedLeftItem) {
                 selectedLeftItem.classList.remove('selected');
             }
@@ -244,16 +256,8 @@
         }
 
         function selectRightItem(element) {
+            removeCurrentAnimatedItem();  // Remove o bloco ampliado ao clicar em qualquer outro bloco
             if (!selectedLeftItem) return;
-
-            // Remover o item animado anterior, se houver
-            if (currentAnimatedItem) {
-                currentAnimatedItem.classList.add('fade-out');
-                setTimeout(() => {
-                    currentAnimatedItem.style.display = 'none';
-                    currentAnimatedItem = null;
-                }, 500);
-            }
 
             speakText(element);
 
