--- a/nivelA/unidade1/Flashcards/index.html
+++ b/nivelA/unidade1/Flashcards/index.html
@@ -157,7 +157,7 @@
         // Função para reproduzir o som da palavra
         function playSound(word) {
             const utterance = new SpeechSynthesisUtterance(word);
-            utterance.lang = 'en-GB'; // Define o idioma para inglês britânico
+            utterance.lang = 'en-US'; // Define o idioma para inglês 
             window.speechSynthesis.speak(utterance);
         }
 
