--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -3,30 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Hannah Memory Game</title>
     <link rel="stylesheet" href="style.css">
 
-<style>
-.image-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 15px;
-    justify-content: center;
-    margin-bottom: 20px;
-}
+    <style>
+        .image-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 15px;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
 
-.image-container img {
-    max-width: 100px;
-    margin: auto;
-}
-</style>
+        .image-container img {
+            aspect-ratio: 1 / 1;
+            width: 100%;
+            max-width: 120px;
+            height: auto;
+            margin: auto;
+            min-width: 80px; /* Tamanho mínimo das cartas */
+        }
+
+        @media (max-width: 480px) {
+            .image-container img {
+                min-width: 60px; /* Tamanho mínimo para telas pequenas */
+                max-width: 100px;
+            }
+        }
+    </style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
-    Back
-</button>
+    <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
+        Back
+    </button>
 
-    <h1>Memory Game</h1>
+    <h1>Hannah Memory Game</h1>
     <p>Moves: <span id="move-counter">0</span></p>
     <button id="restart">Restart Game</button>
     <div id="game-board" class="game-board"></div>
