--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
+        body {
+            background-color: #3498db; /* Cor de fundo atualizada */
+            color: white;
+            text-align: center;
+            font-family: Arial, sans-serif;
+            padding: 10px;
+        }
+
         .image-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -21,7 +29,41 @@
             max-width: 120px;
             height: auto;
             margin: auto;
-            min-width: 80px; /* Tamanho mínimo das cartas */
+            min-width: 100px;
+            object-fit: cover; /* Garante que a imagem seja ajustada dentro do quadrado */
+            display: block;
+        }
+
+        .card {
+            position: relative;
+            width: 100%;
+            padding-top: 100%; /* Garante que a altura seja igual à largura */
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .card-content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            font-size: 1rem;
+            color: black;
+            padding: 5px;
+            box-sizing: border-box;
+        }
+
+        .card img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Garante que a imagem seja ajustada dentro do quadrado sem distorção */
         }
 
         @media (max-width: 480px) {
@@ -33,7 +75,7 @@
     </style>
 </head>
 <body>
-    <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
+    <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #2980b9; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
         Back
     </button>
 
