--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-color: #3498db; /* Cor de fundo atualizada */
+            background-color: #3498db; /* Cor de fundo */
             color: white;
             text-align: center;
             font-family: Arial, sans-serif;
@@ -23,25 +23,26 @@
             margin-bottom: 20px;
         }
 
-        .image-container img {
-            aspect-ratio: 1 / 1;
-            width: 100%;
-            max-width: 120px;
-            height: auto;
-            margin: auto;
-            min-width: 100px;
-            object-fit: cover; /* Garante que a imagem seja ajustada dentro do quadrado */
-            display: block;
-        }
-
         .card {
-            position: relative;
             width: 100%;
-            padding-top: 100%; /* Garante que a altura seja igual à largura */
+            padding-top: 100%; /* Garante que a altura seja sempre igual à largura */
+            position: relative;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .card img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ajusta a imagem para cobrir completamente a área da carta */
         }
 
         .card-content {
@@ -58,16 +59,11 @@
             color: black;
             padding: 5px;
             box-sizing: border-box;
-        }
-
-        .card img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Garante que a imagem seja ajustada dentro do quadrado sem distorção */
+            z-index: 1; /* Assegura que o texto apareça sobre a imagem */
         }
 
         @media (max-width: 480px) {
-            .image-container img {
+            .image-container .card {
                 min-width: 60px; /* Tamanho mínimo para telas pequenas */
                 max-width: 100px;
             }
@@ -82,7 +78,13 @@
     <h1>Hannah Memory Game</h1>
     <p>Moves: <span id="move-counter">0</span></p>
     <button id="restart">Restart Game</button>
-    <div id="game-board" class="game-board"></div>
+    <div id="game-board" class="game-board">
+        <!-- Cartas de exemplo para mostrar a estrutura -->
+        <div class="card">
+            <img src="sua-imagem.jpg" alt="Exemplo">
+            <div class="card-content">SOLDIER</div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
