--- a/nivelA/unidade1/index.html
+++ b/nivelA/unidade1/index.html
@@ -153,7 +153,7 @@
         <a href="../unidade1/MatchingGame/index.html"><img src="../../imagens/botoes/matching_game_button.png" alt="Matching Game"></a>
         <a href="../unidade1/Flashcards/index.html"><img src="../../imagens/botoes/flashcards_button.png" alt="Flashcards"></a>
         <a href="../unidade1/MemoryGame/index.html"><img src="../../imagens/botoes/memorygame_button.png" alt="Memory Game"></a>
-        <a href="../unidade1/Quiz/index.html"><img src="../../imagens/botoes/quiz_button.png" alt="Quiz"></a>
+        <a href="../unidade1/QUIZ/index.html"><img src="../../imagens/botoes/quiz_button.png" alt="QUIZ"></a>
         <a href="../unidade1/WordSearch/index.html"><img src="../../imagens/botoes/wordsearch_button.png" alt="Word Search"></a>
         <a href="../unidade1/Grammar/index.html"><img src="../../imagens/botoes/grammar_button.png" alt="Grammar"></a>
         <a href="../unidade1/Fine Motor Skills/index.html"><img src="../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
