--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -7,17 +7,9 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-        body {
-            background-color: #3498db; /* Cor de fundo */
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            padding: 10px;
-        }
-
         .image-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            grid-template-columns: repeat(4, 1fr); /* 4 colunas, todas do mesmo tamanho */
             gap: 15px;
             justify-content: center;
             margin-bottom: 20px;
@@ -31,9 +23,6 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
 
         .card img {
@@ -42,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ajusta a imagem para cobrir completamente a área da carta */
+            object-fit: cover; /* A imagem cobre toda a área do cartão */
         }
 
         .card-content {
@@ -61,25 +50,18 @@
             box-sizing: border-box;
             z-index: 1; /* Assegura que o texto apareça sobre a imagem */
         }
-
-        @media (max-width: 480px) {
-            .image-container .card {
-                min-width: 60px; /* Tamanho mínimo para telas pequenas */
-                max-width: 100px;
-            }
-        }
     </style>
 </head>
 <body>
-    <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #2980b9; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
-        Back
-    </button>
+<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
+    Back
+</button>
 
     <h1>Hannah Memory Game</h1>
     <p>Moves: <span id="move-counter">0</span></p>
     <button id="restart">Restart Game</button>
-    <div id="game-board" class="game-board">
-        <!-- Cartas de exemplo para mostrar a estrutura -->
+    <div id="game-board" class="image-container">
+        <!-- Exemplo de uma carta -->
         <div class="card">
             <img src="sua-imagem.jpg" alt="Exemplo">
             <div class="card-content">SOLDIER</div>
