--- a/nivelA/unidade1/QUIZ/index.html
+++ b/nivelA/unidade1/QUIZ/index.html
@@ -242,6 +242,7 @@
         stopReading();
         const questionText = document.getElementById('question-text').innerText;
         speechSynthesisUtterance = new SpeechSynthesisUtterance(questionText);
+        speechSynthesisUtterance.lang = 'en-US'; // Configura o idioma para inglês
         speechSynthesis.speak(speechSynthesisUtterance);
     }
 
