--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -3,69 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah Memory Game</title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="style.css">
 
-    <style>
-        .image-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4 colunas, todas do mesmo tamanho */
-            gap: 15px;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
+<style>
+.image-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 15px;
+    justify-content: center;
+    margin-bottom: 20px;
+}
 
-        .card {
-            width: 100%;
-            padding-bottom: 100%; /* Garante que a altura seja igual à largura */
-            position: relative;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
-
-        .card img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* A imagem cobre toda a área do cartão */
-        }
-
-        .card-content {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            font-size: 1rem;
-            color: black;
-            padding: 5px;
-            box-sizing: border-box;
-            z-index: 1; /* Assegura que o texto apareça sobre a imagem */
-        }
-    </style>
+.image-container img {
+    width: 100%; /* Garante que a largura da imagem seja 100% do contêiner */
+    height: auto; /* Mantém a proporção da imagem */
+    aspect-ratio: 1 / 1; /* Garante que as imagens sejam quadradas */
+    object-fit: cover; /* Corta a imagem se necessário para manter a proporção */
+}
+</style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
-    Back
-</button>
+    <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
+        Back
+    </button>
 
-    <h1>Hannah Memory Game</h1>
+    <h1>Memory Game</h1>
     <p>Moves: <span id="move-counter">0</span></p>
     <button id="restart">Restart Game</button>
     <div id="game-board" class="image-container">
-        <!-- Exemplo de uma carta -->
-        <div class="card">
-            <img src="sua-imagem.jpg" alt="Exemplo">
-            <div class="card-content">SOLDIER</div>
-        </div>
+        <!-- As cartas serão adicionadas dinamicamente aqui -->
     </div>
     <script src="script.js"></script>
 </body>
