--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -9,17 +9,32 @@
 <style>
 .image-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 15px;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    gap: 10px;
     justify-content: center;
     margin-bottom: 20px;
 }
 
 .image-container img {
-    width: 100%; /* Garante que a largura da imagem seja 100% do contêiner */
-    height: auto; /* Mantém a proporção da imagem */
-    aspect-ratio: 1 / 1; /* Garante que as imagens sejam quadradas */
-    object-fit: cover; /* Corta a imagem se necessário para manter a proporção */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card {
+    width: 100%;
+    padding-top: 100%; /* Cria uma proporção de 1:1 para manter as cartas quadradas */
+    position: relative;
+}
+
+.card img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px; /* Ajusta o estilo das bordas das cartas, se necessário */
 }
 </style>
 </head>
@@ -28,11 +43,16 @@
         Back
     </button>
 
-    <h1>Memory Game</h1>
+    <h1>Hannah Memory Game</h1>
     <p>Moves: <span id="move-counter">0</span></p>
     <button id="restart">Restart Game</button>
     <div id="game-board" class="image-container">
         <!-- As cartas serão adicionadas dinamicamente aqui -->
+        <div class="card"><img src="image1.png" alt="Memory Card"></div>
+        <div class="card"><img src="image2.png" alt="Memory Card"></div>
+        <div class="card"><img src="image3.png" alt="Memory Card"></div>
+        <div class="card"><img src="image4.png" alt="Memory Card"></div>
+        <!-- Continue adicionando suas cartas conforme necessário -->
     </div>
     <script src="script.js"></script>
 </body>
