--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -4,42 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
 
-<style>
-.image-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    gap: 15px;
-    justify-content: center;
-    margin-bottom: 20px;
-}
+        h1 {
+            margin-bottom: 20px;
+        }
 
-.image-container img {
-    width: 100%; /* Garante que a largura da imagem seja 100% do contêiner */
-    height: auto; /* Mantém a proporção da imagem */
-    aspect-ratio: 1 / 1; /* Garante que as imagens sejam quadradas */
-    object-fit: cover; /* Corta a imagem se necessário para manter a proporção */
-    border-radius: 5px; /* Bordas arredondadas para um melhor visual */
-}
-</style>
+        .image-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 10px;
+            width: 90%;
+            max-width: 600px;
+        }
+
+        .card {
+            position: relative;
+            padding-top: 100%; /* Mantém a proporção 1:1 */
+            background-color: #3498db;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .card img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin-bottom: 20px;
+        }
+
+        button:hover {
+            background-color: #2980b9;
+        }
+    </style>
 </head>
 <body>
-    <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
-        Back
-    </button>
+    <button onclick="window.location.href='../index.html'">Back</button>
 
     <h1>Memory Game</h1>
-    <p>Moves: <span id="move-counter">0</span></p>
-    <button id="restart">Restart Game</button>
-    <div id="game-board" class="image-container">
-        <!-- As cartas serão adicionadas dinamicamente aqui -->
+    <div class="image-container">
+        <!-- Cartas do jogo -->
         <div class="card"><img src="image1.png" alt="Memory Card"></div>
         <div class="card"><img src="image2.png" alt="Memory Card"></div>
         <div class="card"><img src="image3.png" alt="Memory Card"></div>
         <div class="card"><img src="image4.png" alt="Memory Card"></div>
-        <!-- Continue adicionando suas cartas conforme necessário -->
+        <!-- Continue adicionando suas cartas -->
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
