--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -17,7 +17,7 @@
         }
 
         h1 {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         .image-container {
@@ -55,19 +55,37 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
-            margin-bottom: 20px;
+            margin: 5px;
         }
 
         button:hover {
             background-color: #2980b9;
+        }
+
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .controls p {
+            margin: 5px 0;
+            font-size: 1.2rem;
         }
     </style>
 </head>
 <body>
     <button onclick="window.location.href='../index.html'">Back</button>
 
-    <h1>Memory Game</h1>
-    <div class="image-container">
+    <h1>Hannah Memory Game</h1>
+    
+    <div class="controls">
+        <p>Moves: <span id="move-counter">0</span></p>
+        <button id="restart">Restart Game</button>
+    </div>
+    
+    <div class="image-container" id="game-board">
         <!-- Cartas do jogo -->
         <div class="card"><img src="image1.png" alt="Memory Card"></div>
         <div class="card"><img src="image2.png" alt="Memory Card"></div>
