--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -35,6 +35,7 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
         }
 
         .card img {
@@ -44,6 +45,14 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border-radius: 10px;
+            transform: rotateY(180deg);
+            backface-visibility: hidden;
+            transition: transform 0.3s;
+        }
+
+        .card.show img {
+            transform: rotateY(0deg);
         }
 
         button {
@@ -78,7 +87,7 @@
 <body>
     <button onclick="window.location.href='../index.html'">Back</button>
 
-    <h1>Hannah Memory Game</h1>
+    <h1>Memory Game</h1>
     
     <div class="controls">
         <p>Moves: <span id="move-counter">0</span></p>
@@ -86,14 +95,111 @@
     </div>
     
     <div class="image-container" id="game-board">
-        <!-- Cartas do jogo -->
-        <div class="card"><img src="image1.png" alt="Memory Card"></div>
-        <div class="card"><img src="image2.png" alt="Memory Card"></div>
-        <div class="card"><img src="image3.png" alt="Memory Card"></div>
-        <div class="card"><img src="image4.png" alt="Memory Card"></div>
-        <!-- Continue adicionando suas cartas -->
+        <!-- As cartas serão geradas dinamicamente aqui -->
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        const gameBoard = document.getElementById('game-board');
+        const moveCounter = document.getElementById('move-counter');
+        let moves = 0;
+        let firstCard, secondCard;
+        let lockBoard = false;
+        let cardPairs = [];
+
+        // Função para ler o arquivo palavras.txt e gerar as cartas dinamicamente
+        function loadCards() {
+            fetch('palavras.txt')
+                .then(response => response.text())
+                .then(data => {
+                    const lines = data.trim().split('\n');
+                    lines.forEach(line => {
+                        const [image, word] = line.split(',');
+                        cardPairs.push({ image: image.trim(), word: word.trim() });
+                        cardPairs.push({ image: image.trim(), word: word.trim() }); // Duplicando para fazer pares
+                    });
+                    shuffleAndCreateBoard();
+                });
+        }
+
+        // Função para embaralhar e criar o tabuleiro de cartas
+        function shuffleAndCreateBoard() {
+            const shuffledPairs = shuffle(cardPairs);
+            shuffledPairs.forEach(pair => {
+                const card = document.createElement('div');
+                card.classList.add('card');
+                card.innerHTML = `<img src="imagens/${pair.image}" alt="${pair.word}">`;
+                card.addEventListener('click', flipCard);
+                gameBoard.appendChild(card);
+            });
+        }
+
+        // Função para embaralhar um array
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        // Função para virar a carta
+        function flipCard() {
+            if (lockBoard) return;
+            if (this === firstCard) return;
+
+            this.classList.add('show');
+
+            if (!firstCard) {
+                firstCard = this;
+                return;
+            }
+
+            secondCard = this;
+            checkForMatch();
+        }
+
+        // Função para verificar se as cartas combinam
+        function checkForMatch() {
+            const isMatch = firstCard.innerHTML === secondCard.innerHTML;
+            isMatch ? disableCards() : unflipCards();
+        }
+
+        // Função para desativar as cartas que combinam
+        function disableCards() {
+            firstCard.removeEventListener('click', flipCard);
+            secondCard.removeEventListener('click', flipCard);
+            resetBoard();
+        }
+
+        // Função para virar as cartas de volta se não combinarem
+        function unflipCards() {
+            lockBoard = true;
+            setTimeout(() => {
+                firstCard.classList.remove('show');
+                secondCard.classList.remove('show');
+                resetBoard();
+            }, 1000);
+        }
+
+        // Função para reiniciar o estado do tabuleiro
+        function resetBoard() {
+            [firstCard, secondCard, lockBoard] = [null, null, false];
+            moves++;
+            moveCounter.textContent = moves;
+        }
+
+        // Função para reiniciar o jogo
+        function restartGame() {
+            gameBoard.innerHTML = '';
+            moves = 0;
+            moveCounter.textContent = moves;
+            cardPairs = [];
+            loadCards();
+        }
+
+        // Inicializa o jogo ao carregar a página
+        document.getElementById('restart').addEventListener('click', restartGame);
+        loadCards();
+    </script>
 </body>
 </html>
